target/generated-sources/antlr4/com/github/lopoha/coboltruffle/parser/antlr/CobolParser.java
// Generated from com\github\lopoha\coboltruffle\parser\antlr\Cobol.g4 by ANTLR 4.8
package com.github.lopoha.coboltruffle.parser.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CobolParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IDENTIFICATION=1, ENVIRONMENT=2, CONFIGURATION=3, SPECIALNAMES=4, DECIMALPOINT=5, 
		INPUTOUTPUT=6, FILECONTROL=7, DATA=8, FILE=9, WORKINGSTORAGE=10, LINKAGE=11, 
		PROCEDURE=12, USING=13, DIVISION=14, SECTION=15, TRUE=16, FALSE=17, INITIALIZE=18, 
		EQUAL=19, LESS=20, NUMERIC=21, END=22, EXIT=23, PROGRAM=24, PERFORM=25, 
		MOVE=26, TO=27, IF=28, THEN=29, ELSE=30, ENDIF=31, IS=32, PIC=33, COMMA=34, 
		PICXS=35, PICX=36, PIC9S=37, PIC9=38, VALUE=39, SPACE=40, PROGRAMID=41, 
		REDEFINES=42, FILLER=43, ID=44, NUMBER=45, CHAR=46, INT=47, WS=48, EOL=49, 
		DOT=50, MINUS=51, OPENBRACKET=52, CLOSEBRACKET=53, STRING=54, UNKNOWN=55;
	public static final int
		RULE_file = 0, RULE_identificationDivision = 1, RULE_programID = 2, RULE_environmentDivision = 3, 
		RULE_configurationSection = 4, RULE_specialNames = 5, RULE_inputOutputSection = 6, 
		RULE_dataDivision = 7, RULE_fileSection = 8, RULE_workingStorageSection = 9, 
		RULE_linkageSection = 10, RULE_procedureDivision = 11, RULE_procedureUsing = 12, 
		RULE_variableDefinition = 13, RULE_variableRedefines = 14, RULE_variableDataType = 15, 
		RULE_variableDataTypeString = 16, RULE_variableValueString = 17, RULE_variableDataTypeNumber = 18, 
		RULE_variableValueNumber = 19, RULE_variableSize = 20, RULE_functionSection = 21, 
		RULE_functionSectionStart = 22, RULE_jumpPoint = 23, RULE_functionSectionEnd = 24, 
		RULE_programExit = 25, RULE_statement = 26, RULE_moveStatement = 27, RULE_initializeStatement = 28, 
		RULE_ifStatement = 29, RULE_ifCondition = 30, RULE_ifNumeric = 31, RULE_ifCompare = 32, 
		RULE_ifSingleValue = 33, RULE_value = 34, RULE_functionCallStatement = 35, 
		RULE_programEnd = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "identificationDivision", "programID", "environmentDivision", 
			"configurationSection", "specialNames", "inputOutputSection", "dataDivision", 
			"fileSection", "workingStorageSection", "linkageSection", "procedureDivision", 
			"procedureUsing", "variableDefinition", "variableRedefines", "variableDataType", 
			"variableDataTypeString", "variableValueString", "variableDataTypeNumber", 
			"variableValueNumber", "variableSize", "functionSection", "functionSectionStart", 
			"jumpPoint", "functionSectionEnd", "programExit", "statement", "moveStatement", 
			"initializeStatement", "ifStatement", "ifCondition", "ifNumeric", "ifCompare", 
			"ifSingleValue", "value", "functionCallStatement", "programEnd"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "'9'", null, null, null, null, null, null, null, null, null, 
			null, null, "'.'", "'-'", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IDENTIFICATION", "ENVIRONMENT", "CONFIGURATION", "SPECIALNAMES", 
			"DECIMALPOINT", "INPUTOUTPUT", "FILECONTROL", "DATA", "FILE", "WORKINGSTORAGE", 
			"LINKAGE", "PROCEDURE", "USING", "DIVISION", "SECTION", "TRUE", "FALSE", 
			"INITIALIZE", "EQUAL", "LESS", "NUMERIC", "END", "EXIT", "PROGRAM", "PERFORM", 
			"MOVE", "TO", "IF", "THEN", "ELSE", "ENDIF", "IS", "PIC", "COMMA", "PICXS", 
			"PICX", "PIC9S", "PIC9", "VALUE", "SPACE", "PROGRAMID", "REDEFINES", 
			"FILLER", "ID", "NUMBER", "CHAR", "INT", "WS", "EOL", "DOT", "MINUS", 
			"OPENBRACKET", "CLOSEBRACKET", "STRING", "UNKNOWN"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cobol.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CobolParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public IdentificationDivisionContext identificationDivision() {
			return getRuleContext(IdentificationDivisionContext.class,0);
		}
		public EnvironmentDivisionContext environmentDivision() {
			return getRuleContext(EnvironmentDivisionContext.class,0);
		}
		public DataDivisionContext dataDivision() {
			return getRuleContext(DataDivisionContext.class,0);
		}
		public ProcedureDivisionContext procedureDivision() {
			return getRuleContext(ProcedureDivisionContext.class,0);
		}
		public ProgramEndContext programEnd() {
			return getRuleContext(ProgramEndContext.class,0);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).exitFile(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			identificationDivision();
			setState(75);
			environmentDivision();
			setState(76);
			dataDivision();
			setState(77);
			procedureDivision();
			setState(78);
			programEnd();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentificationDivisionContext extends ParserRuleContext {
		public TerminalNode IDENTIFICATION() { return getToken(CobolParser.IDENTIFICATION, 0); }
		public TerminalNode DIVISION() { return getToken(CobolParser.DIVISION, 0); }
		public TerminalNode DOT() { return getToken(CobolParser.DOT, 0); }
		public ProgramIDContext programID() {
			return getRuleContext(ProgramIDContext.class,0);
		}
		public IdentificationDivisionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identificationDivision; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).enterIdentificationDivision(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).exitIdentificationDivision(this);
		}
	}

	public final IdentificationDivisionContext identificationDivision() throws RecognitionException {
		IdentificationDivisionContext _localctx = new IdentificationDivisionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_identificationDivision);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(IDENTIFICATION);
			setState(81);
			match(DIVISION);
			setState(82);
			match(DOT);
			setState(83);
			programID();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramIDContext extends ParserRuleContext {
		public TerminalNode PROGRAMID() { return getToken(CobolParser.PROGRAMID, 0); }
		public List<TerminalNode> DOT() { return getTokens(CobolParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(CobolParser.DOT, i);
		}
		public TerminalNode ID() { return getToken(CobolParser.ID, 0); }
		public ProgramIDContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programID; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).enterProgramID(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).exitProgramID(this);
		}
	}

	public final ProgramIDContext programID() throws RecognitionException {
		ProgramIDContext _localctx = new ProgramIDContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_programID);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(PROGRAMID);
			setState(86);
			match(DOT);
			setState(87);
			match(ID);
			setState(88);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnvironmentDivisionContext extends ParserRuleContext {
		public TerminalNode ENVIRONMENT() { return getToken(CobolParser.ENVIRONMENT, 0); }
		public TerminalNode DIVISION() { return getToken(CobolParser.DIVISION, 0); }
		public TerminalNode DOT() { return getToken(CobolParser.DOT, 0); }
		public ConfigurationSectionContext configurationSection() {
			return getRuleContext(ConfigurationSectionContext.class,0);
		}
		public InputOutputSectionContext inputOutputSection() {
			return getRuleContext(InputOutputSectionContext.class,0);
		}
		public EnvironmentDivisionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_environmentDivision; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).enterEnvironmentDivision(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).exitEnvironmentDivision(this);
		}
	}

	public final EnvironmentDivisionContext environmentDivision() throws RecognitionException {
		EnvironmentDivisionContext _localctx = new EnvironmentDivisionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_environmentDivision);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(ENVIRONMENT);
			setState(91);
			match(DIVISION);
			setState(92);
			match(DOT);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONFIGURATION) {
				{
				setState(93);
				configurationSection();
				}
			}

			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INPUTOUTPUT) {
				{
				setState(96);
				inputOutputSection();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConfigurationSectionContext extends ParserRuleContext {
		public TerminalNode CONFIGURATION() { return getToken(CobolParser.CONFIGURATION, 0); }
		public TerminalNode SECTION() { return getToken(CobolParser.SECTION, 0); }
		public TerminalNode DOT() { return getToken(CobolParser.DOT, 0); }
		public SpecialNamesContext specialNames() {
			return getRuleContext(SpecialNamesContext.class,0);
		}
		public ConfigurationSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_configurationSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).enterConfigurationSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).exitConfigurationSection(this);
		}
	}

	public final ConfigurationSectionContext configurationSection() throws RecognitionException {
		ConfigurationSectionContext _localctx = new ConfigurationSectionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_configurationSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(CONFIGURATION);
			setState(100);
			match(SECTION);
			setState(101);
			match(DOT);
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPECIALNAMES) {
				{
				setState(102);
				specialNames();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpecialNamesContext extends ParserRuleContext {
		public TerminalNode SPECIALNAMES() { return getToken(CobolParser.SPECIALNAMES, 0); }
		public List<TerminalNode> DOT() { return getTokens(CobolParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(CobolParser.DOT, i);
		}
		public TerminalNode DECIMALPOINT() { return getToken(CobolParser.DECIMALPOINT, 0); }
		public TerminalNode IS() { return getToken(CobolParser.IS, 0); }
		public TerminalNode COMMA() { return getToken(CobolParser.COMMA, 0); }
		public SpecialNamesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specialNames; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).enterSpecialNames(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).exitSpecialNames(this);
		}
	}

	public final SpecialNamesContext specialNames() throws RecognitionException {
		SpecialNamesContext _localctx = new SpecialNamesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_specialNames);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(SPECIALNAMES);
			setState(106);
			match(DOT);
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DECIMALPOINT) {
				{
				setState(107);
				match(DECIMALPOINT);
				setState(108);
				match(IS);
				setState(109);
				match(COMMA);
				setState(110);
				match(DOT);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InputOutputSectionContext extends ParserRuleContext {
		public TerminalNode INPUTOUTPUT() { return getToken(CobolParser.INPUTOUTPUT, 0); }
		public TerminalNode SECTION() { return getToken(CobolParser.SECTION, 0); }
		public List<TerminalNode> DOT() { return getTokens(CobolParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(CobolParser.DOT, i);
		}
		public TerminalNode FILECONTROL() { return getToken(CobolParser.FILECONTROL, 0); }
		public InputOutputSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inputOutputSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).enterInputOutputSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).exitInputOutputSection(this);
		}
	}

	public final InputOutputSectionContext inputOutputSection() throws RecognitionException {
		InputOutputSectionContext _localctx = new InputOutputSectionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_inputOutputSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(INPUTOUTPUT);
			setState(114);
			match(SECTION);
			setState(115);
			match(DOT);
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FILECONTROL) {
				{
				setState(116);
				match(FILECONTROL);
				setState(117);
				match(DOT);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataDivisionContext extends ParserRuleContext {
		public TerminalNode DATA() { return getToken(CobolParser.DATA, 0); }
		public TerminalNode DIVISION() { return getToken(CobolParser.DIVISION, 0); }
		public TerminalNode DOT() { return getToken(CobolParser.DOT, 0); }
		public FileSectionContext fileSection() {
			return getRuleContext(FileSectionContext.class,0);
		}
		public WorkingStorageSectionContext workingStorageSection() {
			return getRuleContext(WorkingStorageSectionContext.class,0);
		}
		public LinkageSectionContext linkageSection() {
			return getRuleContext(LinkageSectionContext.class,0);
		}
		public DataDivisionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataDivision; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).enterDataDivision(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).exitDataDivision(this);
		}
	}

	public final DataDivisionContext dataDivision() throws RecognitionException {
		DataDivisionContext _localctx = new DataDivisionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dataDivision);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(DATA);
			setState(121);
			match(DIVISION);
			setState(122);
			match(DOT);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FILE) {
				{
				setState(123);
				fileSection();
				}
			}

			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WORKINGSTORAGE) {
				{
				setState(126);
				workingStorageSection();
				}
			}

			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LINKAGE) {
				{
				setState(129);
				linkageSection();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FileSectionContext extends ParserRuleContext {
		public TerminalNode FILE() { return getToken(CobolParser.FILE, 0); }
		public TerminalNode SECTION() { return getToken(CobolParser.SECTION, 0); }
		public TerminalNode DOT() { return getToken(CobolParser.DOT, 0); }
		public FileSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fileSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).enterFileSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).exitFileSection(this);
		}
	}

	public final FileSectionContext fileSection() throws RecognitionException {
		FileSectionContext _localctx = new FileSectionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_fileSection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(FILE);
			setState(133);
			match(SECTION);
			setState(134);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WorkingStorageSectionContext extends ParserRuleContext {
		public TerminalNode WORKINGSTORAGE() { return getToken(CobolParser.WORKINGSTORAGE, 0); }
		public TerminalNode SECTION() { return getToken(CobolParser.SECTION, 0); }
		public TerminalNode DOT() { return getToken(CobolParser.DOT, 0); }
		public List<VariableDefinitionContext> variableDefinition() {
			return getRuleContexts(VariableDefinitionContext.class);
		}
		public VariableDefinitionContext variableDefinition(int i) {
			return getRuleContext(VariableDefinitionContext.class,i);
		}
		public WorkingStorageSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_workingStorageSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).enterWorkingStorageSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).exitWorkingStorageSection(this);
		}
	}

	public final WorkingStorageSectionContext workingStorageSection() throws RecognitionException {
		WorkingStorageSectionContext _localctx = new WorkingStorageSectionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_workingStorageSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(WORKINGSTORAGE);
			setState(137);
			match(SECTION);
			setState(138);
			match(DOT);
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NUMBER) {
				{
				{
				setState(139);
				variableDefinition();
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinkageSectionContext extends ParserRuleContext {
		public TerminalNode LINKAGE() { return getToken(CobolParser.LINKAGE, 0); }
		public TerminalNode SECTION() { return getToken(CobolParser.SECTION, 0); }
		public TerminalNode DOT() { return getToken(CobolParser.DOT, 0); }
		public List<VariableDefinitionContext> variableDefinition() {
			return getRuleContexts(VariableDefinitionContext.class);
		}
		public VariableDefinitionContext variableDefinition(int i) {
			return getRuleContext(VariableDefinitionContext.class,i);
		}
		public LinkageSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_linkageSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).enterLinkageSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).exitLinkageSection(this);
		}
	}

	public final LinkageSectionContext linkageSection() throws RecognitionException {
		LinkageSectionContext _localctx = new LinkageSectionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_linkageSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(LINKAGE);
			setState(146);
			match(SECTION);
			setState(147);
			match(DOT);
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NUMBER) {
				{
				{
				setState(148);
				variableDefinition();
				}
				}
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcedureDivisionContext extends ParserRuleContext {
		public TerminalNode PROCEDURE() { return getToken(CobolParser.PROCEDURE, 0); }
		public TerminalNode DIVISION() { return getToken(CobolParser.DIVISION, 0); }
		public TerminalNode DOT() { return getToken(CobolParser.DOT, 0); }
		public ProcedureUsingContext procedureUsing() {
			return getRuleContext(ProcedureUsingContext.class,0);
		}
		public List<FunctionSectionContext> functionSection() {
			return getRuleContexts(FunctionSectionContext.class);
		}
		public FunctionSectionContext functionSection(int i) {
			return getRuleContext(FunctionSectionContext.class,i);
		}
		public ProcedureDivisionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedureDivision; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).enterProcedureDivision(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).exitProcedureDivision(this);
		}
	}

	public final ProcedureDivisionContext procedureDivision() throws RecognitionException {
		ProcedureDivisionContext _localctx = new ProcedureDivisionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_procedureDivision);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(PROCEDURE);
			setState(155);
			match(DIVISION);
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==USING) {
				{
				setState(156);
				procedureUsing();
				}
			}

			setState(159);
			match(DOT);
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(160);
				functionSection();
				}
				}
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcedureUsingContext extends ParserRuleContext {
		public TerminalNode USING() { return getToken(CobolParser.USING, 0); }
		public List<TerminalNode> ID() { return getTokens(CobolParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CobolParser.ID, i);
		}
		public ProcedureUsingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedureUsing; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).enterProcedureUsing(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CobolListener ) ((CobolListener)listener).exitProcedureUsing(this);
		}
	}

	public final ProcedureUsingContext procedureUsing() throws RecognitionException {
		ProcedureUsingContext _localctx = new ProcedureUsingContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_procedureUsing);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			match(USING);
			{
			setState(168); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(167);
				match(ID);
				}
				}
				setState(170); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
